fix align social menu with logo
align social menu with logo

fixes #649

--- a/sass/navigation/_menu-social-navigation.scss
+++ b/sass/navigation/_menu-social-navigation.scss
@@ -1,7 +1,7 @@
 /* Social menu */
 
 .social-navigation {
-	margin-top: calc(#{$size__spacing-unit} / 2 );
+	margin-top: calc(#{$size__spacing-unit} / 5 );
 	text-align: left;
 
 	ul.social-links-menu {
