--- a/style.css
+++ b/style.css
@@ -1545,7 +1545,7 @@ body.page .main-navigation {
 
 /* Social menu */
 .social-navigation {
-  margin-top: calc(1rem / 2);
+  margin-top: calc(1rem / 5);
   text-align: left;
 }
 
@@ -3646,6 +3646,7 @@ body.page .main-navigation {
 }
 
 .entry .entry-content .wp-block-button.is-style-outline .wp-block-button__link:hover {
+  color: white;
   border-color: #111;
 }
 
